--- a/ИУ5-61Б_Карпова_РК1.ipynb
+++ b/ИУ5-61Б_Карпова_РК1.ipynb
@@ -1,8 +1,32 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# РК1  \n",
+    "**ИУ5-61Б Карпова Ксения**  \n",
+    "\n",
+    "**Вариант 8**\n",
+    "\n",
+    "---\n",
+    "\n",
+    "## Задача №1\n",
+    "\n",
+    "Для заданного набора данных проведите корреляционный анализ.  \n",
+    "В случае наличия пропусков в данных удалите строки или колонки, содержащие пропуски.  \n",
+    "Сделайте выводы о возможности построения моделей машинного обучения и о возможном вкладе признаков в модель.\n",
+    "\n",
+    "Для пары произвольных колонок данных построить график \"Диаграмма рассеяния\"\n",
+    "\n",
+    "\n",
+    "[Ссылка на датасет](https://www.kaggle.com/datasets/altavish/boston-housing-dataset)\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -85,6 +109,45 @@
     "plt.grid(True)\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "###  **1. Возможность построения моделей машинного обучения**\n",
+    "\n",
+    "- Признаки в данных **демонстрируют значимую корреляцию** с целевой переменной `MEDV`, что позволяет использовать их для построения моделей регрессии или деревьев решений.\n",
+    "- Корреляции позволяют оценить **вклад признаков в модель**: чем выше по модулю корреляция с `MEDV`, тем выше потенциал объяснять колебания цены.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **2. Наиболее важные признаки (по корреляции с `MEDV`)**\n",
+    "\n",
+    "| Признак   | Корреляция с `MEDV` | Влияние на модель |\n",
+    "|-----------|----------------------|-------------------|\n",
+    "| `RM`      | **+0.72**            | Сильное положительное влияние: больше комнат — выше цена |\n",
+    "| `LSTAT`   | **-0.74**            | Сильное отрицательное: больше малоимущих — ниже цена |\n",
+    "| `PTRATIO` | **-0.51**            | Умеренное влияние: больше учеников на учителя — ниже цена |\n",
+    "| `TAX`     | **-0.51**            | Высокие налоги — снижение цены жилья |\n",
+    "| `NOX`     | **-0.46**            | Загрязнение воздуха — негативно влияет |\n",
+    "| `INDUS`   | **-0.51**            | Промзоны снижают привлекательность жилья |\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **3. Взаимные корреляции (мультиколлинеарность)**\n",
+    "\n",
+    "- **`TAX` и `RAD`**: очень высокая корреляция (**0.90**) — могут дублировать информацию → **рекомендуется выбрать только один** из них.\n",
+    "- `INDUS`, `NOX`, `AGE` — сильно коррелируют между собой → тоже стоит быть осторожным при включении всех сразу в модель.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### **Итоговый вывод:**\n",
+    "\n",
+    "Набор данных **подходит для построения регрессионных моделей**, а признаки `LSTAT`, `RM`, `PTRATIO` и `TAX` имеют наибольший вклад в целевую переменную.  \n",
+    "При построении модели необходимо учитывать взаимные зависимости между признаками и избегать их дублирования."
    ]
   }
  ],
